add average household size

--- a/notebooks/total_requests.ipynb
+++ b/notebooks/total_requests.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,24 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vx/451m4zcn6t5bxgj6dhb1_pfm0000gn/T/ipykernel_8390/3567665557.py:7: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/vx/451m4zcn6t5bxgj6dhb1_pfm0000gn/T/ipykernel_11749/3567665557.py:7: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df_g = df[df[request_columns].applymap(lambda x: isinstance(x, list)).any(axis=1)]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(5538, 76)"
+       "(6110, 88)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,23 +84,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5538 households have requested assistance\n",
-      "With a total household size: 25470.0\n"
+      "6110 households have requested assistance\n",
+      "With a total household size: 28076.0\n",
+      "With an average household size: 4.752200406228842\n"
      ]
     }
    ],
    "source": [
-    "# report the number of people who have requested groceries\n",
+    "# report the number of people who have requested assistance\n",
     "print(f\"{df_pn_g.shape[0]} households have requested assistance\")\n",
     "# report their total household size\n",
-    "print(f\"With a total household size: {df_pn_g['Household Size'].sum()}\")"
+    "print(f\"With a total household size: {df_pn_g['Household Size'].sum()}\")\n",
+    "# report average household size\n",
+    "print(f\"With an average household size: {df_pn_g['Household Size'].mean()}\")"
    ]
   },
   {
