remove analyze snapshots from cron as its exhausting mem limits

--- a/notebooks/total_requests.ipynb
+++ b/notebooks/total_requests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,6 +104,32 @@
     "print(f\"With a total household size: {df_pn_g['Household Size'].sum()}\")\n",
     "# report average household size\n",
     "print(f\"With an average household size: {df_pn_g['Household Size'].mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2069 households have requested school supplies\n",
+      "With a total household size: 10858.0\n",
+      "With an average household size: 5.426286856571714\n"
+     ]
+    }
+   ],
+   "source": [
+    "# report the number of people who have requested school supplies\n",
+    "df_ss = df[df['Essential Goods Requests?'].apply(lambda x: 'Cosas de Escuela / School Supplies / 学校用品' in str(x))]\n",
+    "df_ss = df_ss.sort_values('Case #', ascending=False).drop_duplicates('Phone Number')\n",
+    "print(f\"{df_ss.shape[0]} households have requested school supplies\")\n",
+    "# report their total household size\n",
+    "print(f\"With a total household size: {df_ss['Household Size'].sum()}\")\n",
+    "# report average household size\n",
+    "print(f\"With an average household size: {df_ss['Household Size'].mean()}\")"
    ]
   },
   {
