--- a/notebooks/analyze_open_requests.ipynb
+++ b/notebooks/analyze_open_requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "38a24a81-21f9-45ed-a91f-82dd7ccc7e43",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "cd225985-366f-45c6-82a1-418d8499a0de",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "0497e745-7b7e-4b7f-9b28-23f436e8cbcc",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "(45511, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
+   "id": "fa28588a-baac-4a4b-a935-3bb41bd3d43a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5466"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(set(df['Phone Number Hash'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "3597c506-cd43-4c84-b8cb-538cb2d0fdbd",
    "metadata": {},
    "outputs": [
@@ -56,7 +77,7 @@
        "(32774, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
