--- a/notebooks/analyze_open_requests.ipynb
+++ b/notebooks/analyze_open_requests.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "38a24a81-21f9-45ed-a91f-82dd7ccc7e43",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from bam_core.constants import FULFILLED_REQUESTS_SHEET_NAME\n",
-    "from bam_core.lib.google import GoogleSheets"
+    "from bam_core.lib.google import GoogleSheets\n",
+    "from bam_core.lib.airtable import Airtable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "cd225985-366f-45c6-82a1-418d8499a0de",
    "metadata": {},
    "outputs": [],
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "0497e745-7b7e-4b7f-9b28-23f436e8cbcc",
    "metadata": {},
    "outputs": [
@@ -34,7 +35,7 @@
        "(45511, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fa28588a-baac-4a4b-a935-3bb41bd3d43a",
+   "execution_count": 9,
+   "id": "590a2d6c-33c3-4b50-89f2-a86c0258c91a",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
        "5466"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,6 +86,27 @@
    "source": [
     "df_uniq = df.drop_duplicates(['Request Type', 'Item', 'Phone Number Hash'])\n",
     "df_uniq.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa28588a-baac-4a4b-a935-3bb41bd3d43a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6142"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(Airtable().get_phone_number_to_requests_lookup(fields=['Phone Number']).keys()))\n"
    ]
   }
  ],
