--- a/notebooks/analyze_open_requests.ipynb
+++ b/notebooks/analyze_open_requests.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "cd225985-366f-45c6-82a1-418d8499a0de",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "0497e745-7b7e-4b7f-9b28-23f436e8cbcc",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(45511, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
+   "id": "2429b38d-cd39-4221-970e-794c3352fbe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15660"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(set(df['Airtable Link'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "3597c506-cd43-4c84-b8cb-538cb2d0fdbd",
    "metadata": {},
    "outputs": [
@@ -78,7 +99,7 @@
        "(32774, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,6 +107,48 @@
    "source": [
     "df_uniq = df.drop_duplicates(['Request Type', 'Item', 'Phone Number Hash'])\n",
     "df_uniq.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a50ebfb6-1104-4bab-9faa-1000bdba215c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11309"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(set(df_uniq['Airtable Link'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4a22402a-0d1e-4d11-b1d9-b0d81fa90d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5466"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(set(df_uniq['Phone Number Hash'])))"
    ]
   },
   {
